--- a/src/main/webapp/vistas/ratificaciones/View.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/View.xhtml
@@ -28,9 +28,9 @@
                         <h:outputText value="#{bundle.RatificacionesLabel_responsablee}"/>
                         <h:outputText value="#{ratificacionesController.selected.responsablee}" title="#{bundle.RatificacionesTitle_responsablee}"/>
                         <h:outputText value="#{bundle.RatificacionesLabel_comentarios}"/>
-                        <p:inputTextarea value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}" disabled="true"/>
+                        <p:inputTextarea value="#{ratificacionesController.selected.comentarios}" title="#{bundle.RatificacionesTitle_comentarios}"/>
                         <h:outputText value="#{bundle.RatificacionesLabel_status}"/>
-                        <p:selectBooleanCheckbox value="#{ratificacionesController.selected.status}" disabled="true"/>
+                        <p:selectBooleanCheckbox value="#{ratificacionesController.selected.status}"/>
                     </p:panelGrid>
                     </div>
                 </h:panelGroup>
