--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -10,7 +10,6 @@
         <ui:define name="title">
             <h:outputText value="#{bundle.ListGestoresTitle}"></h:outputText>
         </ui:define>
-
         <ui:define name="body">
             <h:form id="GestoresListForm">
                 <p:panel header="#{bundle.ListGestoresTitle}">
@@ -26,7 +25,14 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"                               
                                  emptyMessage="#{bundle.ListGestoresEmpty}"
+                                 paginatorTemplate="{Exporters}"
                                  >
+                        <f:facet name="{Exporters}">
+                            <h:commandLink>
+                                <p:graphicImage library="images" name="excel_icon.png" width="40"/>
+                                <p:dataExporter type="xls" target="datalist" fileName="gestores" />
+                            </h:commandLink>
+                        </f:facet>
                         <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()"/>
                         </f:facet>
@@ -48,7 +54,10 @@
                             <p:commandButton icon="ui-icon-note" action="#{cambiopersonaController.seleccionarPersona(item.designador)}" update=":CambioPersonaForm" oncomplete="PF('CambioPersonaDialog').show()" title="#{bundle.BotonCambioPersonaDesignador}"/>                                                            
                             <p:commandButton icon="ui-icon-pencil" action="#{personasController.prepare1(item.designador)}" update=":PersonasEditarForm" oncomplete="PF('PersonasEditarDialog').show()" title="#{bundle.BotonEditarPersonaDesignador}"/>    
                             <h:outputText value=" #{item.designador.grado} #{item.designador.nombre} #{item.designador.apellidop} #{item.designador.apellidom} "/>
-                        </p:column>            
+                        </p:column> 
+                        <p:column headerText="#{bundle.GestoresTitle_comentarios}" width="10%" >                                
+                            <h:outputLabel value="#{gestoresController.truncateString(item.comentarios)}"  />
+                        </p:column>
                     </p:dataTable>                   
                 </p:panel>
             </h:form>
