--- a/src/main/webapp/vistas/Reportes/list_recibidas.xhtml
+++ b/src/main/webapp/vistas/Reportes/list_recibidas.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
-        <ui:composition template="/templates/templateBase_1.xhtml">
+        <ui:composition template="/templates/templateBase.xhtml">
             <ui:define name="title">
                 <h:outputText value="#{bundle.ReporteRecibidasTitle}"></h:outputText>
             </ui:define>
@@ -32,23 +32,40 @@
                             </center>
                         <br/>
                                 <p:dataTable id="datalist" var="emIngE" value="#{reportesRecibidasController.resultadoContoller}">
+                                    <f:facet name="footer">      
+                                        <h:commandLink>
+                                            <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
+                                            <p:dataExporter type="xls" target="datalist" fileName="reporteEntregadas" />
+                                        </h:commandLink>
+                                        <h:commandLink>
+                                            <p:graphicImage library="images" name="pdf_icon.png" styleClass="iconosDescarga"/>
+                                            <p:dataExporter type="pdf" target="datalist" fileName="reporteEntregadas" encoding="ISO-8859-1"
+		preProcessor="#{reportesRecibidasController.preProcessPDF}"/>
+                                        </h:commandLink>
+                                    </f:facet>
                                     <p:column>
                                         <f:facet name="header">
                                             <h:outputText value="#{bundle.Satelite}"/>
                                         </f:facet>                                            
                                         <h:outputText value="#{emIngE[0]}"/>
+                                        <f:facet name="footer">
+                                            <h:outputText value="#{bundle.TotalImagenes}"/>
+                                        </f:facet>
                                     </p:column>
                                     <p:column>
                                         <f:facet name="header">
                                             <h:outputText value="#{bundle.NoImagenes}"/>
                                         </f:facet>
                                         <h:outputText value="#{emIngE[1]}"/>
+                                        <f:facet name="footer">
+                                            <h:outputText value="#{reportesRecibidasController.getcalcularTotal()}"/>
+                                        </f:facet>
                                     </p:column>
                                 </p:dataTable>
                                 <h3 align="center">#{bundle.TotalImagenes}  #{reportesRecibidasController.getcalcularTotal()}</h3>
                                 <div class="ui-fluid">
-                                <p:chart type="pie" model="#{reportesRecibidasController.grafica}" style="height:300px;margin:20px 0" responsive="true"/>                               
-                                <p:chart type="bar" model="#{reportesRecibidasController.horizontalGrafica}" style="height:300px;margin:20px 0" responsive="true"/>
+                                    <p:chart widgetVar="chart" type="pie" model="#{reportesRecibidasController.grafica}" style="height:300px;margin:20px" responsive="true"/>                                 
+                                    <p:chart type="bar" model="#{reportesRecibidasController.horizontalGrafica}" style="height:300px;margin:20px 0" responsive="true"/>
                                 </div>
                         </p:panel>
                     </h:form>
