--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -25,16 +25,15 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"                               
                                  emptyMessage="#{bundle.ListGestoresEmpty}"
-                                 paginatorTemplate="{Exporters}"
                                  >
-                        <f:facet name="{Exporters}">
+                        <f:facet name="header">
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()"/>                           
+                        </f:facet>
+                        <f:facet name="footer">      
                             <h:commandLink>
-                                <p:graphicImage library="images" name="excel_icon.png" width="40"/>
+                                <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
                                 <p:dataExporter type="xls" target="datalist" fileName="gestores" />
                             </h:commandLink>
-                        </f:facet>
-                        <f:facet name="header">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()"/>
                         </f:facet>
                         <p:column headerText="#{bundle.GestoresTitle_gestor}" width="8%" filterBy="#{item.gestor}">       
                             <h:outputText value="#{item.gestor}"/>
@@ -58,7 +57,7 @@
                         <p:column headerText="#{bundle.GestoresTitle_comentarios}" width="10%" >                                
                             <h:outputLabel value="#{gestoresController.truncateString(item.comentarios)}"  />
                         </p:column>
-                    </p:dataTable>                   
+                    </p:dataTable>  
                 </p:panel>
             </h:form>
 
