--- a/src/main/webapp/vistas/gestores/Edit.xhtml
+++ b/src/main/webapp/vistas/gestores/Edit.xhtml
@@ -63,8 +63,8 @@
                                                 <f:facet name="header">
                                                     <h3>#{bundle.GestoresTitle_designador}</h3>
                                                 </f:facet>
-                                                <p:column headerText="#{bundle.PersonasLabel_curp}">
-                                                    <h:outputText value="#{designador.curp}" />
+                                                <p:column headerText="#{bundle.PersonasTitle_usuarios}">
+                                                    <h:outputText value="#{designador.DGestor} #{designador.DGestor.status}" />
                                                 </p:column>
                                                 <p:column headerText="#{bundle.PersonasLabel_nombre}">
                                                     <h:outputText value="#{designador.grado} #{designador.nombre} #{designador.apellidop} #{designador.apellidom}" />
