--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -16,7 +16,7 @@
                     <p:contextMenu for="datalist">                      
                         <p:menuitem id="editButton"     value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":GestoresEditForm"      oncomplete="PF('GestoresEditDialog').show()"/>
                         <p:menuitem id="viewButton"     value="#{bundle.View}"      icon="ui-icon-search"   update=":GestoresViewForm"      oncomplete="PF('GestoresViewDialog').show()"/>                 
-                        <p:menuitem id="histButton"     value="#{bundle.ViewHD}"    icon="ui-icon-note"   update=":GestoresHistForm"      oncomplete="PF('GestoresHistDialog').show()" action="#{histdesignagestorController.seleccionarGestor(gestoresController.selected)}" title="#{bundle.BotonHistorialDesignador}"/>
+                        <p:menuitem id="histButton"     value="#{bundle.ViewHD}"    icon="ui-icon-note"     update=":GestoresHistForm"      oncomplete="PF('GestoresHistDialog').show()" action="#{histdesignagestorController.seleccionarGestor(gestoresController.selected)}" title="#{bundle.BotonHistorialDesignador}"/>
                     </p:contextMenu>
                     <p:dataTable id="datalist" value="#{gestoresController.items}" var="item"
                                  selectionMode="single" selection="#{gestoresController.selected}"
@@ -32,7 +32,7 @@
                         <f:facet name="footer">      
                             <h:commandLink>
                                 <p:graphicImage library="images" name="excel_icon.png" styleClass="iconosDescarga"/>
-                                <p:dataExporter type="xls" target="datalist" fileName="gestores" />
+                                <p:dataExporter type="xls" target="datalist" fileName="gestores"  />
                             </h:commandLink>
                         </f:facet>
                         <p:column headerText="#{bundle.GestoresTitle_gestor}" width="8%" filterBy="#{item.gestor}">       
@@ -44,15 +44,19 @@
                         <p:column headerText="#{bundle.InstitucionTitle}" filterBy="#{item.idpersona.idinstitucion.nombre}" filterMatchMode="contains">
                             <h:outputText value="#{item.idpersona.idinstitucion.nombre}"/>
                         </p:column>
-                        <p:column headerText="#{bundle.GestoresTitle_idpersona}">
+                        <p:column headerText="#{bundle.GestoresTitle_idpersona}">                            
+                            <h:outputText value="#{item.idpersona.grado} #{item.idpersona.nombre} #{item.idpersona.apellidop} #{item.idpersona.apellidom} "/>
+                        </p:column> 
+                        <p:column exportable="false" width="5%" >
                             <p:commandButton icon="ui-icon-note" action="#{cambiopersonaController.seleccionarPersona(item.idpersona)}" update=":CambioPersonaForm" oncomplete="PF('CambioPersonaDialog').show()" title="#{bundle.BotonCambioPersonaGestor}"/>                                                            
-                            <p:commandButton icon="ui-icon-pencil" action="#{personasController.prepare1(item.idpersona)}" update=":PersonasEditarForm" oncomplete="PF('PersonasEditarDialog').show()" title="#{bundle.BotonEditarPersonaGestor}"/>
-                            <h:outputText value=" #{item.idpersona.grado} #{item.idpersona.nombre} #{item.idpersona.apellidop} #{item.idpersona.apellidom} "/>
-                        </p:column>                        
+                            <p:commandButton icon="ui-icon-pencil" action="#{personasController.prepare1(item.idpersona)}" update=":PersonasEditarForm" oncomplete="PF('PersonasEditarDialog').show()" title="#{bundle.BotonEditarPersonaGestor}"/>             
+                        </p:column> 
                         <p:column headerText="#{bundle.GestoresTitle_designador}">
+                            <h:outputText value="#{item.designador.grado} #{item.designador.nombre} #{item.designador.apellidop} #{item.designador.apellidom} "/>
+                        </p:column> 
+                        <p:column exportable="false" width="5%">
                             <p:commandButton icon="ui-icon-note" action="#{cambiopersonaController.seleccionarPersona(item.designador)}" update=":CambioPersonaForm" oncomplete="PF('CambioPersonaDialog').show()" title="#{bundle.BotonCambioPersonaDesignador}"/>                                                            
                             <p:commandButton icon="ui-icon-pencil" action="#{personasController.prepare1(item.designador)}" update=":PersonasEditarForm" oncomplete="PF('PersonasEditarDialog').show()" title="#{bundle.BotonEditarPersonaDesignador}"/>    
-                            <h:outputText value=" #{item.designador.grado} #{item.designador.nombre} #{item.designador.apellidop} #{item.designador.apellidom} "/>
                         </p:column> 
                         <p:column headerText="#{bundle.GestoresTitle_comentarios}" width="10%" >                                
                             <h:outputLabel value="#{gestoresController.truncateString(item.comentarios)}"  />
